# SemiHoRGod

./: CMakeLists.txt  README.md  mul_protocol_test.py  net_config.json  output.txt  run.sh  test  test.cpp  test.py  备忘录.md
benchmark/: CMakeLists.txt  offline_mpc_sub.cpp  offline_mpc_tp.cpp  offline_nn.cpp  offline_perm.cpp  online_mpc.cpp  online_mpc_tp.cpp  online_nn.cpp  online_nn_tp.cpp  online_perm.cpp  sodo_gridlock_iter.cpp  utils.cpp  utils.h
exp_result/: fcn_offline  fcn_online  lenet_offline  lenet_online  offline_fcn_0  offline_fcn_1  offline_fcn_2  offline_fcn_3  offline_fcn_4  offline_fcn_5  offline_fcn_6  offline_lenet_0  offline_lenet_1  offline_lenet_2  offline_lenet_3  offline_lenet_4  offline_lenet_5  offline_lenet_6  offline_lenet_local_0  offline_lenet_local_1  offline_lenet_local_2  offline_lenet_local_3  offline_lenet_local_4  offline_lenet_local_5  offline_lenet_local_6
help_python/: Gamma.txt  Gamma_sum.py  check_mul_alpha_prod.py  check_string_occurrences.py  counter.py  output.txt
src/: CMakeLists.txt
src/HoRGod/: helpers.cpp  helpers.h  ijmp.cpp  ijmp.h  jump_provider.cpp  jump_provider.h  offline_evaluator.cpp  offline_evaluator.h  online_evaluator.cpp  online_evaluator.h  ot_provider.cpp  ot_provider.h  preproc.h  rand_gen_pool.cpp  rand_gen_pool.h  sharing.cpp  sharing.h  types.cpp  types.h
src/SemiHoRGod/: helpers.cpp  helpers.h  ijmp.cpp  ijmp.h  offline_evaluator.cpp  offline_evaluator.h  online_evaluator.cpp  online_evaluator.h  ot_provider.cpp  ot_provider.h  preproc.h  rand_gen_pool.cpp  rand_gen_pool.h  sharing.h  types.cpp  types.h
src/io/: netmp.h
src/utils/: circuit.cpp  circuit.h  liquidity_matching.h  neural_network.h
test_HoRGod/: CMakeLists.txt  ijmp.cpp  io.cpp  jump.cpp  offline.cpp  offline_online.cpp  online.cpp  sharing.cpp  test.py  utils.cpp
test_SemiHoRGod/: CMakeLists.txt  ijmp.cpp  io.cpp  offline.cpp  offline_online.cpp  online.cpp  permutation.cpp  utils.cpp
